@@ -1,3 +1,9 @@
+2004-04-04 Alvaro del Castillo  <acs@barrapunto.com>
+
+	* src/planner-task-tree.c: implemented task remove undo
+	Currently recovers the task, the position in the tasks tree 
+	the task relations and the resources assignments.
+
 2004-03-29  Richard Hult  <richard@imendio.com>
 
 	* libplanner/mrp-old-xml.c (old_xml_read_assignment): Be more
